# qsvm4eo

./: LICENSE  README.md  classical_svm.ipynb  data_loader.py  pyproject.toml
data/: test_32.csv  train_32.csv
diagram/: qsvm_workflow.pptx
mpi_workflow/: README.md  qsvm_train.py  quantum_task.py  run.sh  run_workflow.py
mpi_workflow_analysis/: analysis.ipynb
mpi_workflow_analysis/results/: results_51735.json  results_52821.json
notebooks/: classical_svm.ipynb  convolutional_encoding.ipynb  convolutional_encoding_analysis.ipynb  myqlm_workflow.ipynb  qek_myqlm.ipynb  qubit_encoding_analysis.ipynb  qutip_workflow.ipynb  radial_encoding_analysis.ipynb
qsvm4eo/: __init__.py  data_loader.py  features2qubits.py  kernel.py  model.py  myqlm_hamiltonian.py  qutip_backend.py  utils.py
