[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qsvm4eo"
description = "Quantum Support Vector Machines for Earth Observation"
readme = "README.md"
authors = [
    {name = "Emil Dimitrov", email = "emil.dimitrov@ichec.ie"},
    {name = "James Nelson", email = "james.nelson@ichec.ie"},
    {name = "Pablo Suárez Vieites", email = "pablo.suarez@ichec.ie"}
    ]
version = "0.0.1"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn"
]

[tool.setuptools.package-dir]
qsvm4eo = "qsvm4eo"

[project.urls]
homepage = "https://github.com/ICHEC/qsvm4eo"
